cleanup logging, login
