# metadata/api-docs.json
@@ -44,33 +44,7 @@
                 "deprecated": false
             }
         },
-        "/api/stream-sse": {
-            "get": {
-                "tags": ["event-controller"],
-                "summary": "streamEvents",
-                "operationId": "streamEventsUsingGET",
-                "produces": ["text/event-stream"],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/FluxOfServerSentEventOfstring"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "deprecated": false
-            }
-        },
-        "/login": {
+        "/api/login": {
             "post": {
                 "tags": ["login-controller"],
                 "summary": "authenticate",
@@ -94,6 +68,32 @@
                     },
                     "201": {
                         "description": "Created"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/api/stream-sse": {
+            "get": {
+                "tags": ["event-controller"],
+                "summary": "streamEvents",
+                "operationId": "streamEventsUsingGET",
+                "produces": ["text/event-stream"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/FluxOfServerSentEventOfstring"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
